# ISSofa

./: .gitignore  Authors.txt  LICENCE.txt  README.md  readme.txt
SofaFramework/: CMakeLists.txt  SofaFramework.h.in  SofaFrameworkConfig.cmake.in
SofaMisc/: CMakeLists.txt  SofaMisc.h.in  SofaMiscConfig.cmake.in
extlibs/EASTL/: CMakeLists.txt
extlibs/cpu_features/: CMakeLists.txt  CpuFeaturesConfig.cmake.in
extlibs/csparse/: CMakeLists.txt  CsparseConfig.cmake.in
extlibs/metis-5.1.0/: CMakeLists.txt  MetisConfig.cmake.in
extlibs/miniBoost/: CMakeLists.txt  SofaBoostConfig.cmake.in
framework/framework_bench/: CMakeLists.txt  CompressedRowSparseMatrixConstraint_bench.cpp  CompressedRowSparseMatrixHelper_bench.h  CompressedRowSparseMatrixMechanical_bench.cpp  CompressedRowSparseMatrixOld.h  README.md
framework/framework_test/: CMakeLists.txt  main.cpp
modules/SofaBaseTopology/: BaseTopology.cpp  BaseTopology.h  BezierTetrahedronSetGeometryAlgorithms.cpp  BezierTetrahedronSetGeometryAlgorithms.h  BezierTetrahedronSetGeometryAlgorithms.inl  BezierTetrahedronSetTopologyContainer.cpp  BezierTetrahedronSetTopologyContainer.h  CMakeLists.txt  CommonAlgorithms.h  CubeTopology.cpp  CubeTopology.h  CylinderGridTopology.cpp  CylinderGridTopology.h  EdgeSetGeometryAlgorithms.cpp  EdgeSetGeometryAlgorithms.h  EdgeSetGeometryAlgorithms.inl  EdgeSetTopologyAlgorithms.cpp  EdgeSetTopologyAlgorithms.h  EdgeSetTopologyAlgorithms.inl  EdgeSetTopologyContainer.cpp  EdgeSetTopologyContainer.h  EdgeSetTopologyModifier.cpp  EdgeSetTopologyModifier.h  GridTopology.cpp  GridTopology.h  HexahedronSetGeometryAlgorithms.cpp  HexahedronSetGeometryAlgorithms.h  HexahedronSetGeometryAlgorithms.inl  HexahedronSetTopologyAlgorithms.cpp  HexahedronSetTopologyAlgorithms.h  HexahedronSetTopologyAlgorithms.inl  HexahedronSetTopologyContainer.cpp  HexahedronSetTopologyContainer.h  HexahedronSetTopologyModifier.cpp  HexahedronSetTopologyModifier.h  MeshTopology.cpp  MeshTopology.h  NumericalIntegrationDescriptor.cpp  NumericalIntegrationDescriptor.h  NumericalIntegrationDescriptor.inl  (+63 more)
modules/SofaBoundaryCondition/: AffineMovementConstraint.cpp  AffineMovementConstraint.h  AffineMovementConstraint.inl  BoundaryCondition.cpp  BoundaryCondition.h  BuoyantForceField.cpp  BuoyantForceField.h  BuoyantForceField.inl  CMakeLists.txt  ConicalForceField.cpp  ConicalForceField.h  ConicalForceField.inl  ConstantForceField.cpp  ConstantForceField.h  ConstantForceField.inl  DiagonalVelocityDampingForceField.cpp  DiagonalVelocityDampingForceField.h  DiagonalVelocityDampingForceField.inl  EdgePressureForceField.cpp  EdgePressureForceField.h  EdgePressureForceField.inl  EllipsoidForceField.cpp  EllipsoidForceField.h  EllipsoidForceField.inl  FixedConstraint.cpp  FixedConstraint.h  FixedConstraint.inl  FixedPlaneConstraint.cpp  FixedPlaneConstraint.h  FixedPlaneConstraint.inl  FixedRotationConstraint.cpp  FixedRotationConstraint.h  FixedRotationConstraint.inl  FixedTranslationConstraint.cpp  FixedTranslationConstraint.h  FixedTranslationConstraint.inl  HermiteSplineConstraint.cpp  HermiteSplineConstraint.h  HermiteSplineConstraint.inl  LinearForceField.cpp  (+73 more)
modules/SofaComponentGeneral/: CMakeLists.txt  initComponentGeneral.cpp  initComponentGeneral.h  initPlugin.cpp  initPlugin.h
modules/SofaComponentMisc/: CMakeLists.txt  initComponentMisc.cpp  initComponentMisc.h  initPlugin.cpp  initPlugin.h
modules/SofaConstraint/: BarycentricDistanceLMConstraintContact.cpp  BarycentricDistanceLMConstraintContact.h  BarycentricDistanceLMConstraintContact.inl  BilateralConstraintResolution.h  BilateralInteractionConstraint.cpp  BilateralInteractionConstraint.h  BilateralInteractionConstraint.inl  CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintAddCToMatrixVisitor.cpp  ConstraintAddCToMatrixVisitor.h  ConstraintAnimationLoop.cpp  ConstraintAnimationLoop.h  ConstraintAttachBodyPerformer.cpp  ConstraintAttachBodyPerformer.h  ConstraintAttachBodyPerformer.inl  ConstraintSolverImpl.cpp  ConstraintSolverImpl.h  ConstraintStoreLambdaVisitor.cpp  ConstraintStoreLambdaVisitor.h  ContactDescription.h  ContactIdentifier.cpp  ContactIdentifier.h  DOFBlockerLMConstraint.cpp  DOFBlockerLMConstraint.h  DOFBlockerLMConstraint.inl  DistanceLMConstraint.cpp  DistanceLMConstraint.h  DistanceLMConstraint.inl  DistanceLMContactConstraint.cpp  DistanceLMContactConstraint.h  DistanceLMContactConstraint.inl  FixedLMConstraint.cpp  FixedLMConstraint.h  FixedLMConstraint.inl  FreeMotionAnimationLoop.cpp  FreeMotionAnimationLoop.h  FrictionContact.cpp  FrictionContact.h  (+44 more)
modules/SofaEngine/: AverageCoord.cpp  AverageCoord.h  AverageCoord.inl  BaseBoxROI.cpp  BaseBoxROI.h  BoxROI.cpp  BoxROI.h  BoxROI.inl  CMakeLists.txt  ClusteringEngine.cpp  ClusteringEngine.h  ClusteringEngine.inl  DilateEngine.cpp  DilateEngine.h  DilateEngine.inl  Engine.cpp  Engine.h  ExtrudeEdgesAndGenerateQuads.cpp  ExtrudeEdgesAndGenerateQuads.h  ExtrudeEdgesAndGenerateQuads.inl  ExtrudeQuadsAndGenerateHexas.cpp  ExtrudeQuadsAndGenerateHexas.h  ExtrudeQuadsAndGenerateHexas.inl  ExtrudeSurface.cpp  ExtrudeSurface.h  ExtrudeSurface.inl  GenerateCylinder.cpp  GenerateCylinder.h  GenerateCylinder.inl  GenerateRigidMass.cpp  GenerateRigidMass.h  GenerateRigidMass.inl  GroupFilterYoungModulus.cpp  GroupFilterYoungModulus.h  GroupFilterYoungModulus.inl  HausdorffDistance.cpp  HausdorffDistance.h  HausdorffDistance.inl  IndexValueMapper.cpp  IndexValueMapper.h  (+100 more)
modules/SofaGeneralExplicitOdeSolver/: CMakeLists.txt  CentralDifferenceSolver.cpp  RungeKutta2Solver.cpp  RungeKutta4Solver.cpp
modules/SofaGeneralImplicitOdeSolver/: CMakeLists.txt
modules/SofaImplicitOdeSolver/: CMakeLists.txt  EulerImplicitSolver.cpp  EulerImplicitSolver.h  ImplicitOdeSolver.cpp  ImplicitOdeSolver.h  StaticSolver.cpp  StaticSolver.h  initImplicitODESolver.cpp  initImplicitODESolver.h
modules/SofaLoader/: CMakeLists.txt  GridMeshCreator.cpp  GridMeshCreator.h  InputEventReader.cpp  InputEventReader.h  Loader.cpp  Loader.h  MeshGmshLoader.cpp  MeshGmshLoader.h  MeshObjLoader.cpp  MeshObjLoader.h  (+26 more)
(+2650 files in other folders)
